--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+@import "./assets/scss/reset.scss";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
