--- a/src/components/remaining-time/RemainingTime.scss
+++ b/src/components/remaining-time/RemainingTime.scss
@@ -8,7 +8,7 @@
   padding: 2px 4px;
 
   color: #000;
-  background-color: red;
+  background-color: #fff;
   border-radius: 11px;
   &__icon {
     margin-right: 4px;
