--- a/src/components/mission-user-path/Objective/Objective.scss
+++ b/src/components/mission-user-path/Objective/Objective.scss
@@ -2,10 +2,17 @@
   display: flex;
 	flex-direction: row;
   padding: 10px 32px 18px;
+	list-style-type: decimal;
 }
 
 .tasks-item {
+	display: flex;
+	align-items: center;
   max-width: 33%;
   width: calc(100% - 40px);
-  margin-right: 40px;
+  margin-right: 20px;
+}
+
+.tasks-desc {
+	margin-right: 20px;
 }
