Implemented avatar component

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+	max-width: 960px;
+	margin: 0 auto;
+}
+
+.avatar-component {
+	margin-top: 100px;
+}
