--- a/src/components/seasonal-rewards/SeasonalRewards.scss
+++ b/src/components/seasonal-rewards/SeasonalRewards.scss
@@ -50,6 +50,13 @@
 	padding: 20px 10px 10px 10px;
   border-top: 1px solid $color-grey;
   border-right: 1px solid $color-grey;
+
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+
   &:first-child,
   &:last-child {
     border-left: none;
