feat/avatar-select

--- a/src/components/avatar/avatar-select/AvatarSelect.scss
+++ b/src/components/avatar/avatar-select/AvatarSelect.scss
@@ -29,9 +29,6 @@
                 border: 5px solid #3dbca1;
             }
 
-            .avatar-select-preview {
-            }
-
             .avatar-select__lock {
                 position: absolute;
                 display: none;
@@ -55,6 +52,7 @@
         .avatar-select__item_is-block {
             &:hover {
                 border: none;
+                cursor: auto;
             }
 
             .avatar-select-preview {
