Created skeleton for avatar component

--- a/src/components/seasonal-rewards/SeasonalRewards.scss
+++ b/src/components/seasonal-rewards/SeasonalRewards.scss
@@ -47,6 +47,7 @@
   min-width: 80px;
   width: 100%;
   min-height: 94px;
+	height: 100%;
 	padding: 20px 10px 10px 10px;
   border-top: 1px solid $color-grey;
   border-right: 1px solid $color-grey;
