--- a/src/components/seasonal-rewards/SeasonalRewards.scss
+++ b/src/components/seasonal-rewards/SeasonalRewards.scss
@@ -53,6 +53,7 @@
 	max-width: 80px;
 	width: 100%;
 	min-height: 94px;
+	height: 100%;
 	flex-grow: 1;
 	flex-shrink: 0;
 	padding: 20px 10px 10px 10px;
