--- a/src/components/AvatarBuilder/AvatarSlot/AvatarSlot.scss
+++ b/src/components/AvatarBuilder/AvatarSlot/AvatarSlot.scss
@@ -1,15 +1,16 @@
-.avatar__item {
+.avatar-slot {
 	margin-bottom: 30px;
 	&:last-child {
 		margin-bottom: 0;
 	}
 }
 
-.avatar__item-title {
+.avatar-slot__title {
+	text-align: center;
 	margin-bottom: 15px;
 }
 
-.avatar__item-button {
+.avatar-slot__button {
 	display: inline-block;
 	width: 102px;
 	height: 102px;
@@ -18,17 +19,14 @@
 	cursor: pointer;
 	background-color: #EFEFEF;
 	border: 5px solid transparent;
-
+	&--active {
+		border-color: #3DBCA1;
+	}
+	&:disabled {
+		opacity: 0.3;
+	}
 	img {
 		width: 100%;
 		height: auto;
 	}
-}
-
-.avatar__item-button--active {
-	border-color: #3DBCA1;
-}
-
-.avatar__item-button:disabled {
-	opacity: 0.3;
 }
