--- a/src/components/mission/remaining-time/RemainingTime.scss
+++ b/src/components/mission/remaining-time/RemainingTime.scss
@@ -1,7 +1,7 @@
 .time-left {
   position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
   left: 8px;
   display: flex;
   align-items: center;
@@ -20,5 +20,22 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+  }
+
+  &__info {
+    display: none;
+
+    font-size: 10px;
+    line-height: 18px;
+  }
+}
+
+.time-left--time-is-over {
+  .time-left__text {
+    display: none;
+  }
+
+  .time-left__info {
+    display: block;
   }
 }
