--- a/src/components/AvatarBuilder/AvatarSelect/AvatarSelect.scss
+++ b/src/components/AvatarBuilder/AvatarSelect/AvatarSelect.scss
@@ -1,71 +1,63 @@
-.avatar-select {
-    &__title {
-        text-align: center;
-        font-size: 18px;
-        line-height: 21px;
-    }
+.avatar-select__list {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 6px -6px;
+}
 
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 12px;
+.avatar-select__title {
+	text-align: center;
+	font-size: 18px;
+	line-height: 21px;
+}
 
-        margin-top: 16px;
+.avatar-select__item {
+	position: relative;
 
-        .avatar-select__item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-            height: 110px;
-            width: 110px;
+	max-width: calc(33.33% - 12px);
+	width: 110px;
+	height: 110px;
+	margin: 6px;
 
-            border-radius: 4px;
-            background: #efefef;
-            cursor: pointer;
+	border-radius: 4px;
+	background: #efefef;
+	cursor: pointer;
+	border: 5px solid transparent;
 
-            &:hover {
-                border: 5px solid #3dbca1;
-            }
+	&:hover {
+		border-color: #3dbca1;
+	}
+}
+.avatar-select__item--active {
+	border-color: #3dbca1;
+}
 
-            .avatar-select__lock {
-                position: absolute;
-                display: none;
+.avatar-select__icon {
+	display: inline-block;
+	width: 100%;
+	height: auto;
+}
 
-                &-icon {
-                    display: flex;
-                    width: 58px;
-                    height: 58px;
-                }
+.avatar-select__lock-icon {
+	width: 58px;
+	height: 58px;
+}
+.avatar-select__lock-figure {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
 
-                &-text {
-                    margin-top: 6px;
-
-                    text-align: center;
-                    font-size: 18px;
-                    line-height: 21px;
-                }
-            }
-        }
-
-        .avatar-select__item_is-block {
-            &:hover {
-                border: none;
-                cursor: auto;
-            }
-
-            .avatar-select-preview {
-                opacity: 0.25;
-            }
-
-            .avatar-select__lock {
-                display: block;
-            }
-        }
-
-        .avatar-select__item_is_select {
-            border: 5px solid #3dbca1;
-        }
-    }
+.avatar-select__lock-figcaption {
+	margin-top: 2px;
+	font-size: 18px;
+}
+.avatar-select__item[aria-disabled="true"] {
+	pointer-events: none;
+	.avatar-select__icon {
+		opacity: 0.3;
+	}
 }
