--- a/src/components/AvatarBuilder/AvatarSlot/AvatarSlot.scss
+++ b/src/components/AvatarBuilder/AvatarSlot/AvatarSlot.scss
@@ -7,6 +7,8 @@
 
 .avatar-slot__title {
 	text-align: center;
+	text-transform: capitalize;
+	font-size: 18px;
 	margin-bottom: 15px;
 }
 
@@ -14,7 +16,8 @@
 	display: inline-block;
 	width: 102px;
 	height: 102px;
-	padding: 12px;
+	padding: 5px;
+	margin: 0;
 	border-radius: 50%;
 	cursor: pointer;
 	background-color: #EFEFEF;
@@ -23,7 +26,10 @@
 		border-color: #3DBCA1;
 	}
 	&:disabled {
-		opacity: 0.3;
+		cursor: auto;
+		img {
+			opacity: 0.3;
+		}
 	}
 	img {
 		width: 100%;
