--- a/src/components/AvatarBuilder/AvatarBuilder.scss
+++ b/src/components/AvatarBuilder/AvatarBuilder.scss
@@ -1,30 +1,42 @@
-.avatar {
+.avatar-builder {
 	position: relative;
 	max-width: 855px;
 	width: 100%;
 	margin: 0 auto;
 }
 
-.avatar__title {
+.avatar-builder__title {
 	padding: 15px 40px;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
 }
-.avatar__button-close {
+.avatar-builder__button-close {
 	position: absolute;
 	top: 18px;
 	right: 18px;
 }
 
-.avatar__content {
+.avatar-builder__content {
 	display: grid;
 	grid-template-columns: 102px auto 102px;
 	padding: 40px 74px;
 }
 
-.avatar__content-center {
+.avatar-builder__content-center {
 	text-align: center;
 	margin-left: 74px;
 	margin-right: 74px;
+}
+
+.avatar-builder__button-close {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	width: 16px;
+	height: 16px;
+	padding: 0;
+	background: none;
+	cursor: pointer;
+	border: none;
 }
