--- a/src/components/AvatarBuilder/AvatarGenerate/AvatarGenerate.scss
+++ b/src/components/AvatarBuilder/AvatarGenerate/AvatarGenerate.scss
@@ -4,6 +4,7 @@
 	justify-content: center;
 	align-content: center;
 	margin-bottom: 50px;
+	cursor: pointer;
 }
 
 .avatar-generate__title {
@@ -13,13 +14,18 @@
 
 .avatar-generate__wrap {
 	position: relative;
-	width:  301px;
+	width: 301px;
 	height: 301px;
 	align-self: center;
 	border-radius: 50%;
-	box-shadow: 0 0 25px 0 rgba(0,0,0,0.45);
+	box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.45);
 	overflow: hidden;
-	img	{
+
+	&--active {
+		box-shadow: 0 0 0 5px rgba(61, 188, 161, 1), 0 0 25px 0 rgba(0, 0, 0, 0.45);
+	}
+
+	img {
 		position: absolute;
 		top: 0;
 		left: 0;
